--- a/analysis/quadmos_analysis.Rmd
+++ b/analysis/quadmos_analysis.Rmd
@@ -5,143 +5,164 @@ date: "May 8, 2015"
 output: html_document
 ---
 
+Preliminaries.
 
 ```{r prelims}
+rm(list=ls())
 library(dplyr)
 library(tidyr)
 library(ggplot2)
 library(binom)
 library(lme4)
+library(bootstrap)
+library(magrittr)
+
+## for bootstrapping 95% confidence intervals
+theta <- function(x,xdata,na.rm=T) {mean(xdata[x],na.rm=na.rm)}
+ci.low <- function(x,na.rm=T) {
+  mean(x,na.rm=na.rm) - quantile(bootstrap(1:length(x),1000,theta,x,na.rm=na.rm)$thetastar,.025,na.rm=na.rm)}
+ci.high <- function(x,na.rm=T) {
+  quantile(bootstrap(1:length(x),1000,theta,x,na.rm=na.rm)$thetastar,.975,na.rm=na.rm) - mean(x,na.rm=na.rm)}
+
+theme_set(theme_bw())
 ```
 
+Load data.
 
 ```{r data_clean}
-d <- read.csv("experiment_1.tsv", header=TRUE, sep="\t", row.names=NULL, stringsAsFactors = FALSE)
-d1 <- read.csv("experiment_2.tsv", header=TRUE, sep="\t", row.names=NULL, stringsAsFactors = FALSE)
+d1 <- read.csv("../data/experiment_1.tsv", header=TRUE, 
+              sep="\t", row.names=NULL, stringsAsFactors = FALSE)
+d2 <- read.csv("../data/experiment_2.tsv", header=TRUE, 
+               sep="\t", row.names=NULL, stringsAsFactors = FALSE)
 
-d <- rbind(d, d1)
-
-n_participants <- length(d$Answer.training_regime)
-
-pre_and_post_responses <- NULL
-
-for (i in 1:length(d$Answer.training_regime)){
-  pre_responses <- d$Answer.pretest_responses[i]
-  pre_responses <- substr(pre_responses, 2, 24)
-  pre_values <- as.integer(strsplit(pre_responses, ",")[[1]])
-  
-  post_responses <- d$Answer.posttest_responses[i]
-  post_responses <- substr(post_responses, 2, 24)
-  post_values <- as.integer(strsplit(post_responses, ",")[[1]])
-  
-  values <- c(pre_values, post_values)
-  
-  pre_and_post_responses <- rbind(pre_and_post_responses, values)
-}
-
-relevant_df <- data.frame(pre_and_post_responses)
-colnames(relevant_df) <- c("pre_1", "pre_2", "pre_3", "pre_4", "pre_5", "pre_6", "pre_7", "pre_8", "pre_9", "pre_10", "pre_11", "pre_12", "post_1", "post_2", "post_3", "post_4", "post_5", "post_6", "post_7", "post_8", "post_9", "post_10", "post_11", "post_12")
-
-
-# Condition 
-relevant_df$condition <- d$Answer.training_regime
-relevant_df$time <- d$Answer.training_time
-relevant_df$shape <- d$Answer.shape_of_focus
-
-
+rd <- bind_rows(d1, d2)
 ```
 
-Question order:
+Constants:
 
-Are all squares parallelograms?
-Are all squares rectangles?
-Are all squares also rhombuses?
-Are all rectangles also parallelograms?
-Are all rectangles also rhombuses?
-Are all rectangles also squares?
-Are all rhombuses also parallelograms?
-Are all rhombuses also rectangles?
-Are all rhombuses also squares?
-Are all parallelograms also rectangles?
-Are all parallelograms also rhombuses?
-Are all parallelograms also squares?
+* Are all squares parallelograms?
+* Are all squares rectangles?
+* Are all squares also rhombuses?
+* Are all rectangles also parallelograms?
+* Are all rectangles also rhombuses?
+* Are all rectangles also squares?
+* Are all rhombuses also parallelograms?
+* Are all rhombuses also rectangles?
+* Are all rhombuses also squares?
+* Are all parallelograms also rectangles?
+* Are all parallelograms also rhombuses?
+* Are all parallelograms also squares?
 
-# shape numbers: 0 square, 1 rectangle, 2 rhombus, 3 parallelogram
-# conditions: 3 Active learning, 4 Passive learning, 5 Baseline condition
+```{r}
+correct_answers <- c(0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1)
 
+questions <- factor(c("sp", "sr", "sh", "rp", "rh", "rs",
+                      "hs", "hr", "hp", "ps", "pr", "ph"))
 
-```{r answer_means}
-correct_responses <- c(0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1)
-square_related <- c(1, 2, 3, 6, 9, 12)
-rectangle_related <- c(2, 4, 5, 6, 8, 10)
-rhombus_related <- c(3, 5, 7, 8, 9, 11)
-parallelogram_related <- c(1, 4, 7, 10, 11, 12)
-
-
-relevant_df$pre_correct <- 1:n_participants*0
-relevant_df$post_correct <- 1:n_participants*0
-
-relevant_df$pre_square_related <- 1:n_participants*0
-relevant_df$post_square_related <- 1:n_participants*0
-
-relevant_df$pre_rectangle_related <- 1:n_participants*0
-relevant_df$post_rectangle_related <- 1:n_participants*0
-
-relevant_df$pre_rhombus_related <- 1:n_participants*0
-relevant_df$post_rhombus_related <- 1:n_participants*0
-
-relevant_df$pre_parallelogram_related <- 1:n_participants*0
-relevant_df$post_parallelogram_related <- 1:n_participants*0
-
-
-for (i in 1:length(relevant_df$condition)) {
-  relevant_df$pre_correct[i] <- sum(correct_responses == relevant_df[i,1:12])
-  relevant_df$post_correct[i] <- sum(correct_responses == relevant_df[i,13:24])
-  
-  relevant_df$pre_square_related[i] <- sum(correct_responses[square_related] == relevant_df[i,square_related])
-  relevant_df$post_square_related[i] <- sum(correct_responses[square_related] == relevant_df[i,(square_related + 12)])
-  relevant_df$pre_rectangle_related[i] <- sum(correct_responses[rectangle_related] == relevant_df[i,rectangle_related])
-  relevant_df$post_rectangle_related[i] <- sum(correct_responses[rectangle_related] == relevant_df[i,(rectangle_related + 12)])
-  relevant_df$pre_rhombus_related[i] <- sum(correct_responses[rhombus_related] == relevant_df[i,rhombus_related])
-  relevant_df$post_rhombus_related[i] <- sum(correct_responses[rhombus_related] == relevant_df[i,(rhombus_related + 12)])
-  relevant_df$pre_parallelogram_related[i] <- sum(correct_responses[parallelogram_related] == relevant_df[i,parallelogram_related])
-  relevant_df$post_parallelogram_related[i] <- sum(correct_responses[parallelogram_related] == relevant_df[i,(parallelogram_related + 12)])
-}
-
-relevant_df$correct_delta <- relevant_df$post_correct - relevant_df$pre_correct
-relevant_df$square_delta <- relevant_df$post_square_related - relevant_df$pre_square_related
-relevant_df$rectangle_delta <- relevant_df$post_rectangle_related - relevant_df$pre_rectangle_related
-relevant_df$rhombus_delta <- relevant_df$post_rhombus_related - relevant_df$pre_rhombus_related
-relevant_df$parallelogram_delta <- relevant_df$post_parallelogram_related - relevant_df$pre_parallelogram_related
-
-
-
-means_by_condition <- aggregate(cbind(pre_square_related, post_square_related, pre_rectangle_related, post_rectangle_related,  pre_rhombus_related, post_rhombus_related, pre_parallelogram_related, post_parallelogram_related, pre_correct, post_correct, correct_delta, time) ~ 
-                             condition + shape, data=relevant_df, mean)
-
-means_by_condition
-
-
-deltas_by_condition <- aggregate(cbind(correct_delta, square_delta, rectangle_delta, rhombus_delta, parallelogram_delta, time) ~ 
-                             condition + shape, data=relevant_df, mean)
-deltas_by_condition
-
-summary(lm(rhombus_delta ~ as.factor(condition), data = relevant_df))
-
+related <- list(square = c(1, 2, 3, 6, 9, 12), 
+                rectangle = c(2, 4, 5, 6, 8, 10),
+                rhombus = c(3, 5, 7, 8, 9, 11),
+                parallel = c(1, 4, 7, 10, 11, 12))
 ```
 
+Data cleaning
+-------------
+
+* shape numbers: 0 square, 1 rectangle, 2 rhombus, 3 parallelogram
+* conditions: 3 Active learning, 4 Passive learning, 5 Baseline condition
 
 
-```{r process_guesses}
-# The idea of this block is to determine how people's guesses in the active learning condition influenced
-# their performance.
-
-d$Answer.guesses
-
-# How to encode the guesses? The rows are more important than the columns. So maybe something that reads:
-# "participant chose two squares and one rectangle"
-
-relevant_df$guessed <- 
-
+```{r}
+d <- rd %>% 
+  select(workerid, starts_with("Answer")) %>%
+  rename(pre = Answer.pretest_responses,
+         post = Answer.posttest_responses,
+         time = Answer.training_time, 
+         shape = Answer.shape_of_focus,
+         cond = Answer.training_regime) %>%
+  select(-starts_with("Answer")) %>%
+  rowwise %>%
+  do(data.frame(workerid = .$workerid, 
+                pre = as.integer(strsplit(substr(.$pre, 2, 24),
+                                                  ",")[[1]]),                
+                post = as.integer(strsplit(substr(.$post, 2, 24),
+                                                  ",")[[1]]),
+                time = .$time, 
+                qnum = 1:12,
+                cond = .$cond,
+                shape = .$shape)) %>%
+  gather(phase, resp, pre, post) %>%
+  mutate(cond = factor(cond, 
+                       levels = c(3,4,5), 
+                       labels = c("active", "teaching", "baseline")),
+         shape = factor(shape, 
+                        levels = c(0, 1, 2, 3), 
+                        labels = c("square","rectangle","rhombus","parallel")),
+         question = questions[qnum], 
+         answer = correct_answers[qnum],
+         correct = resp == answer) %>%
+  rowwise() %>%
+  mutate(relevant = qnum %in% related[shape][[1]])
 ```
 
+Analysis
+--------
+
+Between subjects
+
+```{r}
+ms <- d %>% 
+  group_by(cond, shape, phase, question, relevant) %>%
+  summarise(m.cih = ci.high(correct),
+            m.cil = ci.low(correct),            
+            m = mean(correct))
+
+qplot(question, m, fill = phase, 
+      ymin = m - m.cil, ymax = m + m.cih,
+      position = position_dodge(width = .9),
+      alpha = relevant, 
+      facets = shape ~ cond, 
+      data = ms,       
+      geom = c("bar", "linerange"), stat = "identity") 
+```
+
+Within subjects change scores
+
+```{r}
+ms <- d %>% 
+  select(-resp) %>% 
+  spread(phase, correct) %>%  
+  group_by(cond, shape, question, relevant) %>%
+  summarise(m.cih = ci.high(post - pre),
+            m.cil = ci.low(post - pre),            
+            m = mean(post - pre))
+
+qplot(question, m, fill = relevant,
+      ymin = m - m.cil, ymax = m + m.cih,
+      position = position_dodge(width = .9),
+      facets = shape ~ cond, 
+      data = ms,       
+      geom = c("bar", "linerange"), stat = "identity") 
+```
+
+Within subjects but aggregated across questions
+
+```{r}
+ms <- d %>% 
+  select(-resp) %>% 
+  spread(phase, correct) %>%  
+  group_by(workerid, cond, shape, relevant) %>%
+  summarise(m = mean(post - pre)) %>%
+  group_by(cond, shape, relevant) %>%
+  summarise(m.cih = ci.high(m),
+            m.cil = ci.low(m),
+            m = mean(m), 
+            n = n())
+
+qplot(cond, m, fill = relevant,
+      ymin = m - m.cil, ymax = m + m.cih,
+      position = position_dodge(width = .9),
+      facets = . ~ shape, 
+      data = ms,       
+      geom = c("bar", "linerange"), stat = "identity")
+```
