--- a/analysis/quadmos_analysis.Rmd
+++ b/analysis/quadmos_analysis.Rmd
@@ -53,25 +53,33 @@ relevant_df$shape <- d$Answer.shape_of_focus
 
 Question order:
 
-Are all squares parallelograms?
-Are all squares rectangles?
-Are all squares also rhombuses?
-Are all rectangles also parallelograms?
-Are all rectangles also rhombuses?
-Are all rectangles also squares?
-Are all rhombuses also parallelograms?
-Are all rhombuses also rectangles?
-Are all rhombuses also squares?
-Are all parallelograms also rectangles?
-Are all parallelograms also rhombuses?
-Are all parallelograms also squares?
+1) Are all squares parallelograms?
+2) Are all squares rectangles?
+3) Are all squares also rhombuses?
+4) Are all rectangles also parallelograms?
+5) Are all rectangles also rhombuses?
+6) Are all rectangles also squares?
+7) Are all rhombuses also parallelograms?
+8) Are all rhombuses also rectangles?
+9) Are all rhombuses also squares?
+10) Are all parallelograms also rectangles?
+11) Are all parallelograms also rhombuses?
+12) Are all parallelograms also squares?
 
 # shape numbers: 0 square, 1 rectangle, 2 rhombus, 3 parallelogram
 # conditions: 3 Active learning, 4 Passive learning, 5 Baseline condition
 
 
 ```{r answer_means}
+# real correct
 correct_responses <- c(0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1)
+
+#correct_responses <- c(0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1)
+
+# consistent with alternative
+#correct_responses <- c(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
+
+
 square_related <- c(1, 2, 3, 6, 9, 12)
 rectangle_related <- c(2, 4, 5, 6, 8, 10)
 rhombus_related <- c(3, 5, 7, 8, 9, 11)
@@ -108,6 +116,8 @@ for (i in 1:length(relevant_df$condition)) {
   relevant_df$post_parallelogram_related[i] <- sum(correct_responses[parallelogram_related] == relevant_df[i,(parallelogram_related + 12)])
 }
 
+relevant_df$reasonable_time <- relevant_df$time > 20000
+
 relevant_df$correct_delta <- relevant_df$post_correct - relevant_df$pre_correct
 relevant_df$square_delta <- relevant_df$post_square_related - relevant_df$pre_square_related
 relevant_df$rectangle_delta <- relevant_df$post_rectangle_related - relevant_df$pre_rectangle_related
@@ -126,10 +136,37 @@ deltas_by_condition <- aggregate(cbind(correct_delta, square_delta, rectangle_de
                              condition + shape, data=relevant_df, mean)
 deltas_by_condition
 
+relevant_df$same <- 1:220*0
+
+means_of_questions <- aggregate(cbind(pre_1, pre_2, pre_3, pre_4, pre_5, pre_6, pre_7, pre_8, pre_9, pre_10, pre_11, pre_12, pre_correct) ~ 
+                             reasonable_time, data=relevant_df, mean)
+
+sum(means_of_questions[1,2:13])
+
 summary(lm(rhombus_delta ~ as.factor(condition), data = relevant_df))
 
 ```
 
+
+
+
+```{r histograms}
+
+hist(relevant_df$post_correct)
+
+
+
+
+
+
+fit <- factanal(relevant_df[1:12], 2, rotation="varimax")
+summary(fit) # print variance accounted for 
+loadings(fit) # pc loadings 
+plot(fit,type="lines") # scree plot 
+fit$scores # the principal components
+biplot(fit)
+
+```
 
 
 ```{r process_guesses}
@@ -144,4 +181,7 @@ d$Answer.guesses
 relevant_df$guessed <- 
 
 ```
+
+
+
 
